# Ava-Mosaic-AI

./: LICENSE  README.md  playground.py  pre_publish_check.sh  publish_script.py  pyproject.toml  warning_log.txt
.github/workflows/: publish.yml  pytest.yml  pytest.yml.txt
ava/: llm_factory.py
ava/config/: settings.py
ava_mosaic_ai/: __init__.py  llm_factory.py
ava_mosaic_ai/config/: settings.py
ava_mosaic_ai/utils/: utils.py
examples/: portkey.py  simple.py
tests/: conftest.py  test_llm_factory.py  test_llm_factory_e2e.py
tests/fixtures/vcr_cassettes/: anthropic_e2e_test.yaml  anthropic_parameter_test.yaml  azure_openai_e2e_test.yaml  invalid_api_key_test.yaml  openai_e2e_test.yaml  openai_parameter_test.yaml
tests/functional/: test_complition_generation.py
